# corky-telegram

./: Cargo.toml  README.md  config.toml  corky-telegram.service  install.sh  test.py  uninstall.sh
src/: main.rs
